apps/docs/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  /* Colors, updated based on the new palette */
  --ifm-color-primary: #f02abc; /* Base color */
  --ifm-color-primary-dark: #c02196; /* 20% black */
  --ifm-color-primary-darker: #901970; /* 40% black */
  --ifm-color-primary-darkest: #60104b; /* 60% black */
  --ifm-color-primary-light: #f354c9; /* 20% white */
  --ifm-color-primary-lighter: #f67fd6; /* 40% white */
  --ifm-color-primary-lightest: #f9a9e4; /* 60% white */
  --ifm-footer-logo-max-width: 106px;
  /* Code */
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  /* Colors, updated based on the new palette */
  --ifm-color-primary: #f354c9; /* Base color for dark mode */
  --ifm-color-primary-dark: #f02abc; /* Same as light mode base color */
  --ifm-color-primary-darker: #c02196; /* 20% black */
  --ifm-color-primary-darkest: #901970; /* 40% black */
  /* Primary color used as base color for light colors */
  --ifm-color-primary-light: #f67fd6; /* 20% white */
  --ifm-color-primary-lighter: #f9a9e4; /* 40% white */
  --ifm-color-primary-lightest: #fabae9; /* 60% white */

  /* Code */
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

img[src$='img/logo.svg'] {
  filter: drop-shadow(5px 5px 3px rgba(0, 0, 0, 0.25));
}

.navbar__logo img[src$='img/logo.svg'] {
  filter: none;
}

.wrapper__table {
  overflow: scroll;
}

